# hopper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/hopper-daemon/: Cargo.toml
crates/hopper-daemon/src/: convert.rs  coordinator.rs  facade.rs  lib.rs  main.rs  net.rs  worker.rs
crates/hopper-daemon/tests/: facade.rs  fp16_wire.rs  swarm_kill_reroute.rs
crates/hopper-engine/: Cargo.toml
crates/hopper-engine/src/: engine.rs  error.rs  lib.rs  node.rs
crates/hopper-engine/tests/: four_outcomes.rs
crates/hopper-ledger/: Cargo.toml
crates/hopper-ledger/src/: clock.rs  lib.rs  pow.rs
crates/hopper-model/: Cargo.toml
crates/hopper-model/src/: cache.rs  config.rs  error.rs  golden.rs  lib.rs  stage.rs  tokenizer.rs  weights.rs
crates/hopper-model/tests/: audit_invariant.rs  golden_parity.rs
crates/hopper-model/tests/common/: mod.rs
crates/hopper-net/: Cargo.toml
crates/hopper-net/src/: lib.rs  p2p.rs  router.rs  transport.rs
crates/hopper-proto/: Cargo.toml  build.rs
crates/hopper-proto/proto/: hopper.proto
crates/hopper-proto/src/: lib.rs
crates/hopper-verify/: Cargo.toml
crates/hopper-verify/src/: lib.rs
docs/: TECH_SPEC.md
reference/: api.py  demo.py  engine.py  export_golden.py  ledger.py  model.py  node.py  requirements.txt  router.py  transport.py  verify.py
reference/golden/: manifest.json
