[package]
name = "hopper-daemon"
description = "Binary: tokio daemon + OpenAI-compatible HTTP facade (mirrors reference/api.py)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hopper-model = { path = "../hopper-model" }
hopper-engine = { path = "../hopper-engine" }   # reuse Node for worker stage hosting
hopper-ledger = { path = "../hopper-ledger" }   # in-process engine wiring (facade)
hopper-verify = { path = "../hopper-verify" }   # quiet verifier for the facade engine
hopper-net = { path = "../hopper-net" }
hopper-proto = { path = "../hopper-proto" }
ndarray = "0.16"
half = "2"            # f16 activations on the wire
libp2p = { version = "0.55", features = [
    "tokio",
    "quic",
    "kad",
    "request-response",
    "identify",
    "macros",
] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
anyhow = "1"                                      # bins may use anyhow
clap = { version = "4", features = ["derive"] }   # daemon CLI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Phase 4 OpenAI facade:
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }  # ServiceExt::oneshot for HTTP tests
