[package]
name = "hopper-engine"
description = "Orchestration: pipeline, byte/FLOP accounting, mid-stream reroute (mirrors reference/engine.py)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hopper-model = { path = "../hopper-model" }
hopper-ledger = { path = "../hopper-ledger" }
hopper-verify = { path = "../hopper-verify" }
hopper-net = { path = "../hopper-net" }
ndarray = "0.16"
rand = "0.9"          # sampling at temperature > 0
rand_chacha = "0.9"   # explicit, reproducible seeding
thiserror = "2"
