[package]
name = "hopper-ledger"
description = "L2: decayed FLOP contribution ledger, PoW identity, slashing (mirrors reference/ledger.py)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"  # hashcash proof-of-work for identity minting
