[package]
name = "hopper-proto"
description = "Protobuf wire types for the swarm (prost); codegen arrives in Phase 3."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost = "0.13"  # protobuf wire types

[build-dependencies]
prost-build = "0.13"  # codegen
protox = "0.7"        # pure-Rust .proto compiler (no system protoc needed in CI)
